--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,10 +17,11 @@ form{
 	padding: 1em;
     border: 1px solid #CCC;
     border-radius: 1em;
+    div{
+        margin-top: 1em;
+    }
 }
-form div + div {
-    margin-top: 1em;
-}
+
 label {
     display: inline-block;
     width: 90px;
@@ -32,4 +33,8 @@ input, textarea {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     border: 1px solid #999;
+}
+button{
+	margin-left: 135px;
+	margin-top: 1em;
 }
