--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,16 @@
+* {
+  font-family: 'Raleway'; }
+
 label, select, input, th {
   margin: 5px 0; }
 
 table {
   border-collapse: collapse; }
+  table a {
+    text-decoration: none;
+    color: black; }
+    table a:hover {
+      color: red; }
 
 th, td {
   border: 1px solid black; }
@@ -16,21 +24,20 @@ form {
   border-radius: 1em; }
   form div {
     margin-top: 1em; }
+  form label {
+    display: inline-block;
+    width: 90px;
+    text-align: left; }
+  form input, form textarea {
+    font: 1em sans-serif;
+    width: 200px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid #999; }
+  form button {
+    margin-top: 1em; }
 
-label {
-  display: inline-block;
-  width: 90px;
-  text-align: left; }
-
-input, textarea {
-  font: 1em sans-serif;
-  width: 200px;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: 1px solid #999; }
-
-button {
-  margin-left: 135px;
-  margin-top: 1em; }
+h1 {
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
