--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,18 @@
+*{
+    font-family: 'Raleway';
+}
 label, select, input, th{
   margin: 5px 0;
 }
 table{
 	border-collapse: collapse;
+    a{
+        text-decoration: none;
+        color: black;
+        &:hover{
+            color: red;
+        }
+    }
 }
 th, td{
 	border: 1px solid black;
@@ -20,21 +30,24 @@ form{
     div{
         margin-top: 1em;
     }
+    label {
+        display: inline-block;
+        width: 90px;
+        text-align: left;
+    }
+    input, textarea {
+        font: 1em sans-serif;
+        width: 200px;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        border: 1px solid #999;
+    }
+    button{
+        margin-top: 1em;
+    }
 }
 
-label {
-    display: inline-block;
-    width: 90px;
-    text-align: left;
+h1{
+    text-align: center;
 }
-input, textarea {
-    font: 1em sans-serif;
-    width: 200px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 1px solid #999;
-}
-button{
-	margin-left: 135px;
-	margin-top: 1em;
-}
+
