--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,77 @@
-
+@charset "UTF-8";
+body {
+  font-size: 16px;
+  background: #FFECA6;
+  font-family: 'Montserrat'; }
+  body .content {
+    width: 900px;
+    margin: 0 auto; }
+  body .content_up_cr {
+    width: 600px;
+    margin: 0 auto; }
+    body .content_up_cr a {
+      text-decoration: none;
+      color: black; }
+      body .content_up_cr a:hover {
+        transition: color .3s ease-out;
+        color: white; }
+  body #delete {
+    float: right;
+    margin: 10px calc((76px - 54px)/2) 0 0; }
+  body table {
+    font-size: 16px;
+    margin: 0 auto;
+    border-collapse: collapse; }
+    body table th {
+      font-weight: bold;
+      border: 0.5px solid black;
+      padding: 10px; }
+    body table td {
+      border: 0.5px solid black;
+      padding: 10px; }
+      body table td a {
+        text-decoration: none;
+        color: black; }
+        body table td a:hover {
+          transition: color .3s ease-out;
+          color: white; }
+      body table td input {
+        margin-left: 22px; }
+  body h1 {
+    text-align: center; }
+  body .form_upd, body .form_crea {
+    margin: 0 auto;
+    width: 600px;
+    /* Pour voir les limites du formulaire */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em; }
+    body .form_upd label, body .form_crea label {
+      font-size: 18px;
+      margin-left: 102px;
+      /* Afin de s'assurer que toutes les étiquettes aient la même dimension et soient alignées correctement */
+      display: inline-block;
+      width: 90px;
+      text-align: left;
+      margin-top: 1em; }
+    body .form_upd input, body .form_upd textarea, body .form_crea input, body .form_crea textarea {
+      /* Afin de s'assurer que tous les champs textuels utilisent la même police
+         Par défaut, textarea utilise une police à espacement constant */
+      font-family: 'Montserrat';
+      font-size: 16px;
+      /* Pour donner la même dimension à tous les champs textuels */
+      width: 300px;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box; }
+    body .form_upd textarea, body .form_crea textarea {
+      /* Pour aligner correctement les champs multilignes et leurs étiquettes */
+      vertical-align: top;
+      /* Pour donner assez d'espace pour entrer du texte */
+      height: 5em;
+      /* Pour permettre aux utilisateurs de redimensionner un champ textuel horizontalement
+         Cela ne marche pas avec tous les navigateurs  */
+      resize: vertical; }
+    body .form_upd button, body .form_crea button {
+      margin: 1em 0 0 calc((630px - 152px)/2); }
 
 /*# sourceMappingURL=style.css.map */
